labs/31-kubernetes-gitops/source/grant-api/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: control-service
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grant-api-ingress
  namespace: control-service
  annotations:
    iaas.example.com/replace-cidr: approved private cluster CIDR from Zero Trust network owner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grant-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - ipBlock: {cidr: 10.20.0.0/16}
      ports:
        - {protocol: TCP, port: 8002}
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: approval-api
      ports:
        - {protocol: TCP, port: 8002}
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grant-expiry
      ports:
        - {protocol: TCP, port: 8002}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grant-api-egress
  namespace: control-service
  annotations:
    iaas.example.com/replace-cidr: approved private cluster, control-db and Keycloak CIDRs must be patched
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grant-api
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - ipBlock: {cidr: 10.200.10.10/32}
      ports:
        - {protocol: TCP, port: 5432}
    - to:
        - ipBlock: {cidr: 10.20.0.0/16}
      ports:
        - {protocol: TCP, port: 8000}
    - to:
        - ipBlock: {cidr: 10.10.0.0/16}
      ports:
        - {protocol: TCP, port: 443}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grant-expiry-egress
  namespace: control-service
  annotations:
    iaas.example.com/replace-cidr: Keycloak CIDR must be patched
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grant-expiry
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grant-api
      ports:
        - {protocol: TCP, port: 8002}
    - to:
        - ipBlock: {cidr: 10.10.0.0/16}
      ports:
        - {protocol: TCP, port: 443}
